# LBM_lora

./: .gitignore  README.md  pyproject.toml  requirements.txt
checkpoints_lora/relighting/lora_relighting_test/version_0/: events.out.tfevents.1758739667.yw101.565253.0
checkpoints_lora/relighting/lora_relighting_test/version_1/: events.out.tfevents.1758740234.yw101.566668.0
checkpoints_lora/relighting/lora_relighting_test/version_2/: events.out.tfevents.1758741262.yw101.568504.0
checkpoints_lora/relighting/lora_relighting_test/version_3/: events.out.tfevents.1758741744.yw101.568942.0
checkpoints_lora/relighting/lora_relighting_test/version_4/: events.out.tfevents.1758741947.yw101.571992.0  hparams.yaml
checkpoints_lora/relighting/wandb/: latest-run
examples/: gradio_demo.py  inference_relight.py  utils.py
examples/inference/: config.yaml  gradio_demo.py  inference.py  utils.py
examples/training/: train_lbm_religth.py  train_lbm_surface.py
examples/training/config/: relight.yaml  surface.yaml
lora/: .gitignore  README.md  create_exact_base_model.py  extract_lora_native.py  inference_native.py  lbm_utils.py  lora_layer_names.txt  lora_layers.py  lora_relight_config.yaml  test_reconstruction_simple.py  train_lora.py
lora/checkpoints/: my_lora_config.yaml
src/lbm/trainer/: loggers.py  trainer.py  training_config.py  utils.py
test_dataset/: relight_test.yaml  val_single.tar
tests/test_dataset/: test_filters.py  test_mappers.py
tests/test_lbm/: test_lbm.py
tests/test_unets/: test_unets_wrappers.py
tests/test_vaes/: test_autoencoder.py
(+18 files in other folders)
